# crawl4md

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE.md  MARKDOWN_PREPROCESSING.md  README.md  crawl.yml.example  pyproject.toml
docs/: markdown_preprocessing.md  testing.md
profiles/: wikipedia.yml
src/crawl4md/: __init__.py  check.py  cli.py  config.py  crawler.py  frames.py  language_variables.py  paths.py  preprocessing.py  profiles.py  sitemap.py  writer.py
src/crawl4md/convert/: crawl4ai_markdown.py  kreuzberg_dev_markdown.py  markdown.py  markdown_converter_crawl4ai.py  markdown_converter_kreuzberg_dev.py
src/crawl4md/convert/base/: __init__.py  base_markdown_converter.py
src/crawl4md/convert/preprocessing/: __init__.py  markdown.py
src/crawl4md/core/: cli.py  language.py  paths.py  profiles.py  sitemap.py  writer.py
src/crawl4md/fetch/: crawl4ai_markdown.py  html.py  html_fetcher_crawl4ai.py  html_fetcher_kreuzberg_dev.py  kreuzberg_dev_markdown.py  markdown.py  markdown_fetcher_crawl4ai.py  markdown_fetcher_kreuzberg_dev.py
src/crawl4md/fetch/base/: __init__.py  base_html_fetcher.py  base_markdown_fetcher.py
src/crawl4md/fetch/normalization/: __init__.py  html.py
src/crawl4md/fetch/normalize/: mediawiki_entity.py  url.py  (+1 more)
src/crawl4md/i18n/: __init__.py
src/crawl4md/models/: __init__.py  markdown_converter_session.py
src/crawl4md/preprocessing/: __init__.py  markdown.py
src/crawl4md/utils/: __init__.py  check_helpers.py  frames.py  markdown_converter_sessions.py  preprocessing_test_cases.py  progress_helpers.py  progress_runner.py
tests/: test_crawler.py  test_language.py  test_markdown_converter.py  test_preprocessing.py
tests/base/: progress_checks_test_case.py
tests/pipeline/: test_pipeline.py
tests/preprocessing/: test_ensure_h1.py  test_normalize_linebreak.py  test_normalize_tables.py  test_normalize_whitespace.py  test_remove_blocks.py  test_remove_html_comments.py  test_remove_images.py  test_remove_lines.py  test_remove_links.py  test_remove_sections.py
tests/preprocessing/support/: data_provider.py
tests/profile/: test_profile.py  test_profiles.py
tests/support/: progress.py
(+111 files in other folders)
