[project]
name = "crawl4md"
version = "0.1.2"
requires-python = ">=3.11"

dependencies = [
    "typer",
    "pydantic",
    "pyyaml",
    "requests",
    "lxml",
    "crawl4ai"
]

[project.scripts]
crawl = "crawl4md.cli:app"
check = "crawl4md.check:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl4md"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff",
]
