[project]
name = "crawl4md"
version = "0.1.4"
requires-python = ">=3.11"
description = "Convert web pages and HTML to clean Markdown"
readme = "README.md"
authors = [{ name = "Björn Hempel" }]
license = { text = "MIT" }

dependencies = [
    "typer",
    "pydantic",
    "pyyaml",
    "requests",
    "lxml",
    "crawl4ai"
]

[project.scripts]
crawl = "crawl4md.cli:app"
check = "crawl4md.check:main"
check-markdown-converter = "crawl4md.check:markdown_converter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl4md"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff",
]
