[project]
name = "crawl4md"
version = "0.1.4"
requires-python = ">=3.11"
description = "Convert web pages and HTML to clean Markdown"
readme = "README.md"
authors = [{ name = "Björn Hempel" }]
license = { text = "MIT" }

dependencies = [
    "typer",
    "pydantic",
    "pyyaml",
    "requests",
    "lxml",
    "crawl4ai",
    "html-to-markdown>=3.3.2",
]

[project.scripts]
crawl = "crawl4md.cli:app"
check = "crawl4md.check:main"
check-markdown-converter = "crawl4md.check:markdown_converter"
check-profile = "crawl4md.check:profile"
check-pipeline = "crawl4md.check:pipeline"
check-preprocessing = "crawl4md.check:preprocessing"
check-ruff = "crawl4md.check:check_ruff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl4md"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff",
]
